test/e2e/fail_compile/type_errors/reference_return_unsupported.cst
fn view(value: &num) -> &num {
    value
}

fn main() {}
